--- a/src/components/datetime-widget.html
+++ b/src/components/datetime-widget.html
@@ -2,8 +2,24 @@
     <div class="widget-debug-info">
         <span class="widget-name">DateTime Widget</span>
     </div>
-    <div id="day">mon</div>
-    <div id="time">3.30pm</div>
-    <div id="temperature">30°C</div>
+    <div class="datetime-content">
+        <div id="day">mon</div>
+        <div id="time">3.30pm</div>
+        <div id="temperature">30°C</div>
+    </div>
+    <div class="weather-details">
+        <div class="weather-detail-item">
+            <div class="weather-detail-label">Humidity</div>
+            <div id="humidity" class="weather-detail-value">60%</div>
+        </div>
+        <div class="weather-detail-item">
+            <div class="weather-detail-label">Wind</div>
+            <div id="wind" class="weather-detail-value">10 km/h</div>
+        </div>
+        <div class="weather-detail-item">
+            <div class="weather-detail-label">Precipitation</div>
+            <div id="precipitation" class="weather-detail-value">20%</div>
+        </div>
+    </div>
     <button class="widget-toggle" aria-label="Toggle widget size">🖹</button>
 </div>
